# vehicle_signal_simulator

./: .gitignore  LICENSE  README.md
VehicleSignalSimulator/: CMakeLists.txt  ReadMe.md
VehicleSignalSimulator/CMake/: unit_test_helper.cmake
VehicleSignalSimulator/include/: SvmSignalTypes.h  mylog.h
VehicleSignalSimulator/src/: AcfInterfaceAdapter.cpp  AcfInterfaceAdapter.h  ConsoleCamImpl.cpp  ConsoleCamImpl.h  MessagelProccessor.cpp  MessagelProccessor.h  MessagelProccessor_test.cpp  main.cpp  test.cpp
VehicleSignalSimulator/src/dep/: DemoInterfaceAdapter..cpp  DemoInterfaceAdapter.h  InterfaceAdapter.h  MockInterfaceAdapter.h
